# PluginTutorialCN

./: .gitignore  Format.ps1  LICENSE  README.md
docs/: AddressLibrary.md  CommonLibSSE.md  CommonMethods.md  PluginTemplate.md  QuickStart.md  Setup.md  ToUnknown.md
docs/CM/: Data.md  Event.md  Events.md  Hook.md  Hooks.md  Interface.md  Interfaces.md
docs/CM/Interface/: Messaging.md  Object.md  Papyrus.md  Scaleform.md  Serialization.md  Task.md
docs/CM/Interfaces/: Messaging.md  Object.md  Papyrus.md  Scaleform.md  Serialization.md  Task.md
docs/resources/: Events.md  Papyrus.md  Plugin.md
docs/setup/: QuickStart.md  Script.md  Setup.md
docs/tounknown/: ASM101.md  ASM102.md  DEBUG101.md  FuncHook.md  MemPatch.md  NERR.md  YCS.md
example/: !Update.ps1  CMakeLists.txt  vcpkg.json
example/src/: PCH.h  main.cpp
examples/Interface/: Messaging.cpp  main.cpp
examples/Interfaces/: messaging.cpp
examples/PluginTemplate/: PluginTemplate.vcxproj  PluginTemplate.vcxproj.filters  exports.def
examples/PluginTemplate/include/: version.h
examples/PluginTemplate/src/: main.cpp
